[project]
name = "lefchiper"
version = "0.1.0"
description = "Modular encryption tool with modes like glasicc and lefchaos"
authors = [{ name = "Synnaulaid", email = "syn@warceuproject.org" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "WPCL v1.0" }

[project.scripts]
lefchiper = "lefchiper.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lefchiper*"]
